kube/project-one-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: project-one-ingress
  namespace: thomas-latza
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /latza-project-one(.*)
        backend:
          serviceName: latza-project-one-service
          servicePort: 8042
